[package]
name = "sketches-rust"
version = "0.2.3"
authors = ["loyispa <litiegen456250@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/loyispa/sketches-rust"
homepage = "https://github.com/loyispa/sketches-rust"
description = "Rust implementation of DDSketch."
exclude = [".gitignore"]

[dependencies]
libm = "0.2.8"
protobuf = "3.5.0"

[build-dependencies]
protobuf-codegen = "3.5.0"
protoc-rust = "2.28.0"
